# sentence_smash_in_python

./: Makefile  compose.yml  pyproject.toml  sonar-project.properties
docs/: CONTRIBUTING.md  NOTES.md  README.md
modules/: sentence_smash.py
pacts/: sentence_smash_in_python_client-sentence_smash_in_python_app.json
tests/api/: test_dummy_consumer.py
tests/unit/: test_0_installer_runner.py
