[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "__version__.py",
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.black]
    line-length = 120

[tool.poetry]
name = "Sentence_Smash_in_Python"
authors = ["Gearoid O'Treasaigh <gearoid9@gmail.com>"]
description = "Sentence_Smash_in_Python"
version = "0.0.0"
